Add favicon links to indexmy.html

--- a/indexmy.html
+++ b/indexmy.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Manhwa Tracker (Cloud)</title>
+    
+    <!-- Favicon Links (Comprehensive Set) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="1024x1024" href="favicon/favicon-1024x1024.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicon/favicon-512x512.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="favicon/favicon-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="favicon/favicon-128x128.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="favicon/favicon-64x64.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <!-- End Favicon Links -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Puter.js SDK -->
     <script src="https://js.puter.com/v2/"></script>
